[gd_scene load_steps=13 format=3 uid="uid://wnaspdlvi73m"]

[ext_resource type="Script" uid="uid://bafthhrgscxgr" path="res://shop_interface.gd" id="1_ue7jm"]
[ext_resource type="Texture2D" uid="uid://bctakmib3we4b" path="res://assets/sky.jpg" id="2_7pbp5"]
[ext_resource type="Texture2D" uid="uid://btyi52sy8h4bj" path="res://assets/apple.png" id="2_ae356"]
[ext_resource type="Texture2D" uid="uid://c6ue8aevhc7y7" path="res://assets/star.png" id="3_7pbp5"]
[ext_resource type="Texture2D" uid="uid://c7tnobe20tboh" path="res://assets/coin-icon.png" id="5_7pbp5"]
[ext_resource type="FontFile" uid="uid://bts3vlsd5v4nk" path="res://assets/Chicago.ttf" id="6_def1o"]
[ext_resource type="FontFile" uid="uid://dao18ea4tolcf" path="res://assets/RobotoMono-Medium.ttf" id="7_keifw"]
[ext_resource type="StyleBox" uid="uid://bo0jb15v7d60x" path="res://shop_button.tres" id="8_i67ra"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fu2bt"]
bg_color = Color(0.94902, 0.847059, 0.133333, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 5.0
expand_margin_top = 3.0
expand_margin_right = 5.0
expand_margin_bottom = 3.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_61a7t"]
bg_color = Color(0.817747, 0.253879, 0.143485, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 5.0
expand_margin_top = 3.0
expand_margin_right = 5.0
expand_margin_bottom = 3.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_keifw"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_blend = true
expand_margin_left = 15.0
expand_margin_top = 5.0
expand_margin_right = 15.0
expand_margin_bottom = 5.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_750kt"]
bg_color = Color(0.650128, 0.650128, 0.650128, 0.588235)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 2.0
expand_margin_right = 2.0

[node name="ShopInterface" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ue7jm")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0923496, 0.0245593, 0.106431, 0.882353)

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0.196078)
texture_filter = 1
layout_mode = 0
offset_right = 599.0
offset_bottom = 600.0
texture = ExtResource("2_7pbp5")

[node name="BackgroundContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="BackgroundContainer"]
layout_mode = 0
offset_left = 380.0
offset_top = 524.0
offset_right = 420.0
offset_bottom = 564.0
rotation = 0.565102
texture = ExtResource("2_ae356")

[node name="TextureRect13" type="TextureRect" parent="BackgroundContainer"]
layout_mode = 0
offset_left = 413.0
offset_top = 550.0
offset_right = 448.0
offset_bottom = 582.0
rotation = 1.3303
texture = ExtResource("3_7pbp5")
expand_mode = 2

[node name="TextureRect17" type="TextureRect" parent="BackgroundContainer"]
layout_mode = 0
offset_left = 331.0
offset_top = 457.0
offset_right = 354.0
offset_bottom = 478.0
rotation = -0.385058
texture = ExtResource("3_7pbp5")
expand_mode = 2

[node name="TextureRect18" type="TextureRect" parent="BackgroundContainer"]
layout_mode = 0
offset_left = 464.0
offset_top = 462.0
offset_right = 504.0
offset_bottom = 502.0
rotation = 0.112446
texture = ExtResource("3_7pbp5")
expand_mode = 2

[node name="TextureRect15" type="TextureRect" parent="BackgroundContainer"]
layout_mode = 0
offset_left = 523.0
offset_top = 511.0
offset_right = 573.0
offset_bottom = 556.0
rotation = 0.502877
texture = ExtResource("3_7pbp5")
expand_mode = 2

[node name="TextureRect16" type="TextureRect" parent="BackgroundContainer"]
layout_mode = 0
offset_left = 480.0
offset_top = 388.0
offset_right = 520.0
offset_bottom = 428.0
rotation = -0.770415
texture = ExtResource("3_7pbp5")
expand_mode = 2

[node name="TextureRect2" type="TextureRect" parent="BackgroundContainer"]
layout_mode = 0
offset_left = 488.0
offset_top = 418.0
offset_right = 546.0
offset_bottom = 472.0
rotation = -1.26189
texture = ExtResource("2_ae356")

[node name="TextureRect5" type="TextureRect" parent="BackgroundContainer"]
layout_mode = 0
offset_left = 456.0
offset_top = 581.0
offset_right = 514.0
offset_bottom = 635.0
rotation = -1.26189
texture = ExtResource("2_ae356")

[node name="TextureRect14" type="TextureRect" parent="BackgroundContainer"]
layout_mode = 0
offset_left = 278.0
offset_top = 533.0
offset_right = 341.0
offset_bottom = 586.0
rotation = 0.320343
texture = ExtResource("3_7pbp5")
expand_mode = 2

[node name="TextureRect6" type="TextureRect" parent="BackgroundContainer"]
layout_mode = 0
offset_left = 385.0
offset_top = 517.0
offset_right = 443.0
offset_bottom = 571.0
rotation = -1.26189
texture = ExtResource("2_ae356")

[node name="TextureRect12" type="TextureRect" parent="BackgroundContainer"]
layout_mode = 0
offset_left = 475.0
offset_top = 549.0
offset_right = 503.0
offset_bottom = 574.0
rotation = 1.35499
texture = ExtResource("3_7pbp5")
expand_mode = 2

[node name="TextureRect7" type="TextureRect" parent="BackgroundContainer"]
layout_mode = 0
offset_left = 259.0
offset_top = 536.0
offset_right = 317.0
offset_bottom = 590.0
rotation = -1.26189
texture = ExtResource("2_ae356")

[node name="TextureRect8" type="TextureRect" parent="BackgroundContainer"]
layout_mode = 0
offset_left = 494.0
offset_top = 521.0
offset_right = 552.0
offset_bottom = 575.0
rotation = -1.26189
texture = ExtResource("2_ae356")

[node name="TextureRect3" type="TextureRect" parent="BackgroundContainer"]
layout_mode = 0
offset_left = 457.0
offset_top = 497.0
offset_right = 487.0
offset_bottom = 526.0
rotation = 0.143437
texture = ExtResource("2_ae356")

[node name="TextureRect4" type="TextureRect" parent="BackgroundContainer"]
layout_mode = 0
offset_left = 542.0
offset_top = 514.0
offset_right = 582.0
offset_bottom = 554.0
texture = ExtResource("2_ae356")

[node name="TextureRect9" type="TextureRect" parent="BackgroundContainer"]
layout_mode = 0
offset_left = 521.0
offset_top = 433.0
offset_right = 556.0
offset_bottom = 467.0
texture = ExtResource("3_7pbp5")
expand_mode = 2

[node name="TextureRect10" type="TextureRect" parent="BackgroundContainer"]
layout_mode = 0
offset_left = 401.0
offset_top = 458.0
offset_right = 435.0
offset_bottom = 490.0
rotation = 0.439629
texture = ExtResource("3_7pbp5")
expand_mode = 2

[node name="TextureRect11" type="TextureRect" parent="BackgroundContainer"]
layout_mode = 0
offset_left = 340.0
offset_top = 516.0
offset_right = 369.0
offset_bottom = 545.0
rotation = -0.162023
texture = ExtResource("3_7pbp5")
expand_mode = 2

[node name="TextureRect19" type="TextureRect" parent="BackgroundContainer"]
layout_mode = 0
offset_left = 421.0
offset_top = 382.0
offset_right = 461.0
offset_bottom = 422.0
rotation = 0.565102
texture = ExtResource("2_ae356")

[node name="TextureRect20" type="TextureRect" parent="BackgroundContainer"]
layout_mode = 0
offset_left = 539.478
offset_top = 309.335
offset_right = 574.478
offset_bottom = 341.335
rotation = 1.3303
texture = ExtResource("3_7pbp5")
expand_mode = 2

[node name="TextureRect21" type="TextureRect" parent="BackgroundContainer"]
layout_mode = 0
offset_left = 455.819
offset_top = 400.846
offset_right = 478.819
offset_bottom = 421.846
rotation = -0.385058
texture = ExtResource("3_7pbp5")
expand_mode = 2

[node name="TextureRect22" type="TextureRect" parent="BackgroundContainer"]
layout_mode = 0
offset_left = 446.511
offset_top = 268.078
offset_right = 486.511
offset_bottom = 308.078
rotation = 0.112446
texture = ExtResource("3_7pbp5")
expand_mode = 2

[node name="TextureRect23" type="TextureRect" parent="BackgroundContainer"]
layout_mode = 0
offset_left = 488.893
offset_top = 204.158
offset_right = 538.893
offset_bottom = 249.158
rotation = 0.502877
texture = ExtResource("3_7pbp5")
expand_mode = 2

[node name="TextureRect24" type="TextureRect" parent="BackgroundContainer"]
layout_mode = 0
offset_left = 527.0
offset_top = 167.0
offset_right = 567.0
offset_bottom = 207.0
rotation = -0.770415
texture = ExtResource("3_7pbp5")
expand_mode = 2

[node name="TextureRect25" type="TextureRect" parent="BackgroundContainer"]
layout_mode = 0
offset_left = 509.0
offset_top = 252.0
offset_right = 567.0
offset_bottom = 306.0
rotation = -1.26189
texture = ExtResource("2_ae356")

[node name="TextureRect26" type="TextureRect" parent="BackgroundContainer"]
layout_mode = 0
offset_left = 535.0
offset_top = 309.0
offset_right = 593.0
offset_bottom = 363.0
rotation = -1.26189
texture = ExtResource("2_ae356")

[node name="TextureRect27" type="TextureRect" parent="BackgroundContainer"]
layout_mode = 0
offset_left = 386.0
offset_top = 429.0
offset_right = 449.0
offset_bottom = 482.0
rotation = 0.320343
texture = ExtResource("3_7pbp5")
expand_mode = 2

[node name="TextureRect28" type="TextureRect" parent="BackgroundContainer"]
layout_mode = 0
offset_left = 259.0
offset_top = 588.0
offset_right = 317.0
offset_bottom = 642.0
rotation = -1.26189
texture = ExtResource("2_ae356")

[node name="TextureRect29" type="TextureRect" parent="BackgroundContainer"]
layout_mode = 0
offset_left = 531.827
offset_top = 247.801
offset_right = 559.827
offset_bottom = 272.801
rotation = 1.35499
texture = ExtResource("3_7pbp5")
expand_mode = 2

[node name="TextureRect30" type="TextureRect" parent="BackgroundContainer"]
layout_mode = 0
offset_left = 436.0
offset_top = 463.0
offset_right = 494.0
offset_bottom = 517.0
rotation = -1.26189
texture = ExtResource("2_ae356")

[node name="TextureRect31" type="TextureRect" parent="BackgroundContainer"]
layout_mode = 0
offset_left = 451.0
offset_top = 200.0
offset_right = 509.0
offset_bottom = 254.0
rotation = -1.26189
texture = ExtResource("2_ae356")

[node name="TextureRect32" type="TextureRect" parent="BackgroundContainer"]
layout_mode = 0
offset_left = 482.06
offset_top = 271.28
offset_right = 512.06
offset_bottom = 300.28
rotation = 0.143437
texture = ExtResource("2_ae356")

[node name="TextureRect33" type="TextureRect" parent="BackgroundContainer"]
layout_mode = 0
offset_left = 552.0
offset_top = 161.0
offset_right = 592.0
offset_bottom = 201.0
texture = ExtResource("2_ae356")

[node name="TextureRect34" type="TextureRect" parent="BackgroundContainer"]
layout_mode = 0
offset_left = 411.558
offset_top = 214.521
offset_right = 446.558
offset_bottom = 248.521
texture = ExtResource("3_7pbp5")
expand_mode = 2

[node name="TextureRect35" type="TextureRect" parent="BackgroundContainer"]
layout_mode = 0
offset_left = 449.298
offset_top = 331.144
offset_right = 483.298
offset_bottom = 363.144
rotation = 0.439629
texture = ExtResource("3_7pbp5")
expand_mode = 2

[node name="TextureRect36" type="TextureRect" parent="BackgroundContainer"]
layout_mode = 0
offset_left = 392.0
offset_top = 346.0
offset_right = 421.0
offset_bottom = 375.0
rotation = -0.162023
texture = ExtResource("3_7pbp5")
expand_mode = 2

[node name="Upgrades" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.05
anchor_right = 0.1
anchor_bottom = 0.05
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="Upgrades"]
texture_filter = 1
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_def1o")
theme_override_font_sizes/font_size = 22
text = "Upgrades"

[node name="Speed" type="PanelContainer" parent="Upgrades"]
layout_mode = 2
tooltip_text = "move faster"
mouse_default_cursor_shape = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_fu2bt")

[node name="HBoxContainer" type="HBoxContainer" parent="Upgrades/Speed"]
layout_mode = 2

[node name="Label" type="Label" parent="Upgrades/Speed/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("7_keifw")
text = "speed"

[node name="SpeedCost" type="Label" parent="Upgrades/Speed/HBoxContainer"]
custom_minimum_size = Vector2(25, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("7_keifw")
text = "4"
horizontal_alignment = 2

[node name="Jump" type="PanelContainer" parent="Upgrades"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_fu2bt")

[node name="HBoxContainer" type="HBoxContainer" parent="Upgrades/Jump"]
layout_mode = 2

[node name="Label" type="Label" parent="Upgrades/Jump/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("7_keifw")
text = "jump height"

[node name="JumpCost" type="Label" parent="Upgrades/Jump/HBoxContainer"]
custom_minimum_size = Vector2(25, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("7_keifw")
text = "4"
horizontal_alignment = 2

[node name="Knockback" type="PanelContainer" parent="Upgrades"]
layout_mode = 2
tooltip_text = "hit the apple further"
mouse_default_cursor_shape = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_fu2bt")

[node name="HBoxContainer" type="HBoxContainer" parent="Upgrades/Knockback"]
layout_mode = 2

[node name="Label" type="Label" parent="Upgrades/Knockback/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("7_keifw")
text = "knockback"

[node name="KnockbackCost" type="Label" parent="Upgrades/Knockback/HBoxContainer"]
custom_minimum_size = Vector2(25, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("7_keifw")
text = "4"
horizontal_alignment = 2

[node name="SpearCooldown" type="PanelContainer" parent="Upgrades"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_fu2bt")

[node name="HBoxContainer" type="HBoxContainer" parent="Upgrades/SpearCooldown"]
layout_mode = 2

[node name="Label" type="Label" parent="Upgrades/SpearCooldown/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("7_keifw")
text = "spear cooldown"

[node name="SpearCooldownCost" type="Label" parent="Upgrades/SpearCooldown/HBoxContainer"]
custom_minimum_size = Vector2(25, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("7_keifw")
text = "4"
horizontal_alignment = 2

[node name="DashCooldown" type="PanelContainer" parent="Upgrades"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_fu2bt")

[node name="HBoxContainer" type="HBoxContainer" parent="Upgrades/DashCooldown"]
layout_mode = 2

[node name="Label" type="Label" parent="Upgrades/DashCooldown/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("7_keifw")
text = "dash cooldown"

[node name="DashCooldownCost" type="Label" parent="Upgrades/DashCooldown/HBoxContainer"]
custom_minimum_size = Vector2(25, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("7_keifw")
text = "4"
horizontal_alignment = 2

[node name="DashDistance" type="PanelContainer" parent="Upgrades"]
layout_mode = 2
tooltip_text = "dash further"
mouse_default_cursor_shape = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_fu2bt")

[node name="HBoxContainer" type="HBoxContainer" parent="Upgrades/DashDistance"]
layout_mode = 2

[node name="Label" type="Label" parent="Upgrades/DashDistance/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("7_keifw")
text = "dash distance"

[node name="DashDistCost" type="Label" parent="Upgrades/DashDistance/HBoxContainer"]
custom_minimum_size = Vector2(25, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("7_keifw")
text = "4"
horizontal_alignment = 2

[node name="AppleRoll" type="PanelContainer" parent="Upgrades"]
layout_mode = 2
tooltip_text = "apple rolls more"
mouse_default_cursor_shape = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_fu2bt")

[node name="HBoxContainer" type="HBoxContainer" parent="Upgrades/AppleRoll"]
layout_mode = 2

[node name="Label" type="Label" parent="Upgrades/AppleRoll/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("7_keifw")
text = "apple roll"

[node name="AppleRollCost" type="Label" parent="Upgrades/AppleRoll/HBoxContainer"]
custom_minimum_size = Vector2(25, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("7_keifw")
text = "4"
horizontal_alignment = 2

[node name="Apples" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.05
anchor_right = 0.5
anchor_bottom = 0.1
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="Apples"]
texture_filter = 1
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_def1o")
theme_override_font_sizes/font_size = 22
text = "Apple Type"

[node name="Antigrav" type="PanelContainer" parent="Apples"]
layout_mode = 2
tooltip_text = "move faster"
mouse_default_cursor_shape = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_61a7t")

[node name="HBoxContainer" type="HBoxContainer" parent="Apples/Antigrav"]
layout_mode = 2

[node name="Label" type="Label" parent="Apples/Antigrav/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("7_keifw")
text = "antigravity"

[node name="Label2" type="Label" parent="Apples/Antigrav/HBoxContainer"]
custom_minimum_size = Vector2(25, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("7_keifw")
text = "4"
horizontal_alignment = 2

[node name="Recall" type="PanelContainer" parent="Apples"]
layout_mode = 2
tooltip_text = "move faster"
mouse_default_cursor_shape = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_61a7t")

[node name="HBoxContainer" type="HBoxContainer" parent="Apples/Recall"]
layout_mode = 2

[node name="Label" type="Label" parent="Apples/Recall/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("7_keifw")
text = "recall"

[node name="Label2" type="Label" parent="Apples/Recall/HBoxContainer"]
custom_minimum_size = Vector2(25, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("7_keifw")
text = "4"
horizontal_alignment = 2

[node name="Ghost" type="PanelContainer" parent="Apples"]
layout_mode = 2
tooltip_text = "move faster"
mouse_default_cursor_shape = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_61a7t")

[node name="HBoxContainer" type="HBoxContainer" parent="Apples/Ghost"]
layout_mode = 2

[node name="Label" type="Label" parent="Apples/Ghost/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("7_keifw")
text = "ghost"

[node name="Label2" type="Label" parent="Apples/Ghost/HBoxContainer"]
custom_minimum_size = Vector2(25, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("7_keifw")
text = "4"
horizontal_alignment = 2

[node name="Gold" type="PanelContainer" parent="Apples"]
layout_mode = 2
tooltip_text = "move faster"
mouse_default_cursor_shape = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_61a7t")

[node name="HBoxContainer" type="HBoxContainer" parent="Apples/Gold"]
layout_mode = 2

[node name="Label" type="Label" parent="Apples/Gold/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("7_keifw")
text = "gold"

[node name="Label2" type="Label" parent="Apples/Gold/HBoxContainer"]
custom_minimum_size = Vector2(25, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("7_keifw")
text = "4"
horizontal_alignment = 2

[node name="CoinContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.9
anchor_right = 0.1
anchor_bottom = 0.9
offset_top = -40.0
offset_right = 40.0
grow_vertical = 0
rotation = -0.0872665
theme_override_styles/panel = SubResource("StyleBoxFlat_keifw")

[node name="HBoxContainer" type="HBoxContainer" parent="CoinContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="CoinContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("5_7pbp5")
expand_mode = 2

[node name="CoinLabel" type="Label" parent="CoinContainer/HBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_def1o")
theme_override_font_sizes/font_size = 38
text = "0"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -42.0
offset_right = 51.0
grow_vertical = 0
rotation = 0.10472
theme_override_constants/margin_left = 25
theme_override_constants/margin_bottom = 20

[node name="BackButton" type="Button" parent="MarginContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("7_keifw")
theme_override_font_sizes/font_size = 24
theme_override_styles/focus = ExtResource("8_i67ra")
theme_override_styles/hover_pressed_mirrored = ExtResource("8_i67ra")
theme_override_styles/hover_pressed = ExtResource("8_i67ra")
theme_override_styles/hover = SubResource("StyleBoxFlat_750kt")
theme_override_styles/normal = ExtResource("8_i67ra")
text = "exit"
